# acoli-nmt-library

./: .gitignore  README.md  pyproject.toml
acoli_nmt/: __init__.py  cli.py  config.py  data.py  metrics.py  models.py  serve.py  trainer.py  translator.py
configs/: default.yaml
